--- a/www/templates/book-appoinment.html
+++ b/www/templates/book-appoinment.html
@@ -6,7 +6,7 @@
 			<form class="block-field appoinmentForm" ng-submit="appoinmentData(appData.appDate,appData.appTime,appData.appMsg,appData.appTerms)">
 				<div class="list">
 				  <label class="item item-input">
-					<input type="text" ng-model="appData.appDate" pikaday="myPickerObject" format="MM/DD/YYYY" placeholder="Date">
+					<input type="text" ng-model="appData.appDate" pick-date placeholder="Date">
 				  </label>
 					
 				  <label class="item item-input position-static">
