--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -35,6 +35,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		text-transform: uppercase;
 		font-size: 16px;
 		line-height: 24px;
+		white-space: normal;
 	}
 	p
 	{
@@ -772,5 +773,40 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	{
 		font-size: 14px;
 		line-height: 22px;
+	}
+}
+.circle
+{
+	width: 12px;
+	height: 12px;
+	display: inline-block;
+	background-color: #ddd;
+	border-radius: 50%;
+	margin-left: 7px;
+	&.available
+	{
+		background-color: #5cb85c;
+	}
+	&.not-available
+	{
+		background-color: #d9534f;
+	}
+	&.probably-available
+	{
+		background-color: #eea236;
+	}
+}
+.map-wrapper
+{
+	border-top: 1px solid #1b8dd9;
+}
+.filter
+{
+	padding: 10px;
+	>select
+	{
+		width: 100%;
+		padding: 6px 15px;
+		border: 1px solid #89bcde;
 	}
 }
