Filter label added

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -810,3 +810,14 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		border: 1px solid #89bcde;
 	}
 }
+.mb15
+{
+	margin-bottom: 8px;
+}
+.filter-label
+{
+	font-size: 15px;
+	line-height: 22px;
+	margin-bottom: 3px;
+	display: block;
+}
