--- a/www/templates/listing.html
+++ b/www/templates/listing.html
@@ -33,7 +33,7 @@
 					
 					<button ng-click="viewBusiness($index)" class="button button-outline button-positive button-medium mb15">Obtenir l'itinéraire</button>
 					<br>
-					<button ng-click="bookAppoinment();" class="button button-outline button-positive button-medium">Réservez appoinment</button>
+					<button ng-click="bookAppoinment(list.id_busines);" class="button button-outline button-positive button-medium">Réservez appoinment</button>
 				</div>
 			</ion-item>
 			
