--- a/www/templates/book-appoinment.html
+++ b/www/templates/book-appoinment.html
@@ -6,11 +6,11 @@
 			<form class="block-field appoinmentForm" ng-submit="appoinmentData(appData.appDate,appData.appTime,appData.appMsg,appData.appTerms,appData.appId)">
 				<div class="list">
 				  <label class="item item-input">
-					<input type="text" ng-model="appData.appDate" id="date" pick-date placeholder="Date">
+					<input type="text" ng-model="appData.appDate" id="date" pick-date data-business="{{appData.appId}}" placeholder="Date" required>
 				  </label>
 					
 				  <label class="item item-input position-static">
-					<input type="text" id="appTime" ng-model="appData.appTime" time-picker placeholder="Time">
+					<input type="text" id="appTime" ng-model="appData.appTime" time-picker placeholder="Time" required>
 				  </label>
 					
 				  <label class="item item-input">
@@ -18,8 +18,6 @@
 				  </label>
 					
 				  <ion-checkbox ng-model="appData.appTerms" ng-change="agreeTerms();" required> Terms and conditions</ion-checkbox>
-				  	
-				  <!--<input type="checkbox" ng-model="appData.appTerms" ng-click="term($event);"/>-->
 				</div>
 				 
 				<button class="button button-block button-positive">Book an appoinment </button>
